    - FileListBox re-raises ListBox value changed events.
    - ListBox no longer raises events when deselecting options when
      double-clicked (correctly raised when selecting the correct option).
    - Fixed horizontal position of text in left-aligned text box.
    - ScrollingTextBox scrolls line-by-line when scrollbar is dragged instead
      of smooth-scrolling (easier to read).

  - New Features:
    - Added makefile for demo - can now be built from command line.
    - Added Rect::splitIntersection().
    - Gadget rendering re-written to use damaged rects.
    - Added equality and inequality operator overloads to Rect class.
    - WoopsiArray accepts an initial reserved size parameter in its constructor.
    - FileRequester includes filename textbox.
    - Added FileRequester::getTextBoxFileName().

  V0.99.4 (20100902)
  
  - Fixes:
    - All makefiles no longer create .ds.gba and .sc.nds binaries.
    - Fonts include doxygen comments.
    - Amended return type of some font properties (Lakedaemon).
    - Reorganised PSD and BMP files.
    - Prevented demo build process from unnecessarily including BMP files.
    - Fixed divide by 0 when content size is 0 in SliderVertical and
      SliderHorizontal::resizeGrip().
    - SDL fixes.
    - GraphicsPort maps between co-ordinate systems more accurately; fixes
      clipping problems.
    - Various minor .NET tool improvements.
    - Python bmp2font script updated to match output of .NET tools.
  
  - New Features:
    - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
    - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
    - Added getCharTop() to font classes.
    - Added Gadget::checkCollision(Rect&).
    - Added drawBaselineText() to Graphics and GraphicsPort classes
     (Lakedaemon).
    - Added freetype outline font class (Lakedaemon).
    - Added Install.bat install script for Windows users.

  V0.99.3 (20100819)
  
  - Fixes: