@@ -1,28 +1,28 @@
 #ifndef _GLYPHS_H_
 #define _GLYPHS_H_
 
-#define GLYPH_SCREEN_DEPTH_UP 1
-#define GLYPH_SCREEN_DEPTH_DOWN 2
-#define GLYPH_WINDOW_CLOSE 3
-#define GLYPH_WINDOW_DEPTH_UP 4
-#define GLYPH_WINDOW_DEPTH_DOWN 5
-#define GLYPH_RADIO_BUTTON_OFF 6
-#define GLYPH_RADIO_BUTTON_ON 7
-#define GLYPH_RADIO_BUTTON_MU 8
-#define GLYPH_CHECK_BOX_OFF 9
-#define GLYPH_CHECK_BOX_ON 10
-#define GLYPH_CHECK_BOX_MU 11
-#define GLYPH_SCREEN_FLIP_UP 12
-#define GLYPH_SCREEN_FLIP_DOWN 13
-#define GLYPH_ARROW_UP 14
-#define GLYPH_ARROW_DOWN 15
-#define GLYPH_ARROW_LEFT 16
-#define GLYPH_ARROW_RIGHT 17
-#define GLYPH_CYCLE 18
-#define GLYPH_BACKSPACE 19
-#define GLYPH_RETURN 20
-#define GLYPH_SHIFT 21
-#define GLYPH_CAPS_LOCK 22
-#define GLYPH_CONTROL 23
+const s32 GLYPH_SCREEN_DEPTH_UP = 1;
+const s32 GLYPH_SCREEN_DEPTH_DOWN = 2;
+const s32 GLYPH_WINDOW_CLOSE = 3;
+const s32 GLYPH_WINDOW_DEPTH_UP = 4;
+const s32 GLYPH_WINDOW_DEPTH_DOWN = 5;
+const s32 GLYPH_RADIO_BUTTON_OFF = 6;
+const s32 GLYPH_RADIO_BUTTON_ON = 7;
+const s32 GLYPH_RADIO_BUTTON_MU = 8;
+const s32 GLYPH_CHECK_BOX_OFF = 9;
+const s32 GLYPH_CHECK_BOX_ON = 10;
+const s32 GLYPH_CHECK_BOX_MU = 11;
+const s32 GLYPH_SCREEN_FLIP_UP = 12;
+const s32 GLYPH_SCREEN_FLIP_DOWN = 13;
+const s32 GLYPH_ARROW_UP = 14;
+const s32 GLYPH_ARROW_DOWN = 15;
+const s32 GLYPH_ARROW_LEFT = 16;
+const s32 GLYPH_ARROW_RIGHT = 17;
+const s32 GLYPH_CYCLE = 18;
+const s32 GLYPH_BACKSPACE = 19;
+const s32 GLYPH_RETURN = 20;
+const s32 GLYPH_SHIFT = 21;
+const s32 GLYPH_CAPS_LOCK = 22;
+const s32 GLYPH_CONTROL = 23;
 
 #endif
